slightly better spacing still not fixed

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,14 @@
     text-align: center;
 }
 
+h3, h4, h5 {
+    padding: 20px;
+}
+
+h1 {
+    padding: 30px;
+}
+
 /* Tree */
 
 .node circle {
